# FreeCrafter

./: .gitignore  AGENTS.md  AGENT_CODE_HAZARD_CHECKLIST.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  check_vs.bat  resources.qrc  run_bootstrap.bat
.github/ISSUE_TEMPLATE/: 1-viewport-instability-camera-drift.md  10-measurements-box-inconsistent.md  11-save-load-integrity-windows-packaging.md  12-autosave-crash-recovery-missing.md  13-docking-layout-dark-mode-quirks.md  14-pattern-array-parametric.md  15-fillet-chamfer-enhancements.md  16-nurbs-advanced-surfacing.md  17-plugin-runtime-scripting.md  18-step-iges-interop.md  19-push-pull-preview-ghost-missing.md  2-tool-state-machine-stuck.md  20-build-packaging-docs-incomplete.md  3-push-pull-broken-topology.md  4-solid-booleans-missing.md  5-undo-redo-not-wired.md  6-delete-eraser-ghosts.md  7-outliner-viewport-selection-desynced.md  8-inspector-edits-not-undoable.md  9-cursor-overlay-glyphs.md
.github/workflows/: ci.yml  codeql.yml  release-windows.yml  release.yml
cmake/: cmake_uninstall.cmake.in
docs/: AGENT_CODE_HAZARD_CHECKLIST.md  bug_sweep_status.md  codex_master_ui_tools_spec.md  documentation_map.md  geometry_system_gaps.md  getting_started_and_troubleshooting.md  gui_tool_behaviour_spec.md  handoff_summary.md  legacy-loading-notes.md  phase0_phase1.md  release_validation.md  technical_debt_tasks.md  testing.md
docs/legal/: LGPLv3.txt  notices.md  qt-licensing.md  qt_lgpl_compliance.md
docs/milestones/: dsm.md  file-io.md  performance-stability.md  plugins.md  qa-release.md  rendering.md  tools.md  ui-polish.md
docs/planning/: design-foundation.md  legal-tech-review.md  phase-6-integrated-advanced-tools.md  scope-lock.md  ux-research.md
docs/process/: bug_triage_workflow.md  ci_cd_release_actions.md
docs/review/: scene_exporter_comparison.md
docs/reviews/: freecrafter-reality-check.md  phase6-implementation-assessment.md
docs/status/: 2025-02-11-sanity-check.md  2025-10-10-phase7_5-bug-sweep.md  2025-10-12-bug-suggestions-review.md  2025-11-07-phase7_5-test-log.md  roadmap-progress.md  user-feedback-tasks.md
installer/linux/: build_appimage.sh
installer/mac/: create_dmg.sh
qt/: README.md  manifest.json
resources/config/: hotkeys_default.json  navigation_default.json
resources/hotkeys/: default.json
resources/icons/: TEMP_ICONS.txt
scripts/: bootstrap.py  fetch_qt_runtime.py  gui_bootstrap.py  package_build.ps1  package_gui_bootstrap.py  requirements.txt  run_render_regression.bat  run_tests_with_qt_env.ps1  run_tests_with_qt_env.sh
scripts/tools/: check_no_personal_paths.py  repo_guard.py
src/: CameraController.cpp  CameraController.h  CameraNavigation.cpp  CameraNavigation.h  DebugSimpleViewport.cpp  DebugSimpleViewport.h  GLViewport.cpp  GLViewport.h  HotkeyManager.cpp  HotkeyManager.h  MainWindow.cpp  MainWindow.h  NavigationConfig.h  NavigationPreferences.cpp  NavigationPreferences.h  PalettePreferences.cpp  PalettePreferences.h  Renderer.cpp  Renderer.h  SunModel.cpp  SunModel.h  SunSettings.cpp  SunSettings.h  main.cpp
src/Core/: Command.cpp  Command.h  CommandStack.cpp  CommandStack.h  MeasurementParser.cpp  MeasurementParser.h
src/FileIO/: SceneIOFormat.cpp  SceneIOFormat.h
src/GeometryKernel/: Curve.cpp  Curve.h  GeometryKernel.cpp  GeometryKernel.h  GeometryObject.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  MeshUtils.cpp  MeshUtils.h  Serialization.cpp  Serialization.h  ShapeBuilder.cpp  ShapeBuilder.h  Solid.cpp  Solid.h  TransformUtils.cpp  TransformUtils.h  Vector2.h  Vector3.h
src/Hotkeys/: HotkeyEditorDialog.cpp  HotkeyEditorDialog.h  HotkeyManager.cpp  HotkeyManager.h
src/Interaction/: InferenceEngine.cpp  InferenceEngine.h
src/Navigation/: ViewPresetManager.cpp  ViewPresetManager.h
src/Phase6/: AdvancedModeling.cpp  AdvancedModeling.h
src/Scene/: Document.cpp  Document.h  PrimitiveBuilder.cpp  PrimitiveBuilder.h  SceneCommands.cpp  SceneCommands.h  SceneGraphCommands.cpp  SceneGraphCommands.h  SceneSerializer.cpp  SceneSerializer.h  SceneSettings.cpp  SceneSettings.h  SectionPlane.cpp  SectionPlane.h
src/Tools/: ArcTool.cpp  ArcTool.h  AxesTool.cpp  AxesTool.h  ChamferTool.cpp  ChamferTool.h  CircleTool.cpp  CircleTool.h  DimensionTool.cpp  DimensionTool.h  DrawingTools.cpp  DrawingTools.h  ExtrudeTool.cpp  ExtrudeTool.h  FollowMeTool.cpp  FollowMeTool.h  FreehandTool.cpp  FreehandTool.h  GroundProjection.cpp  GroundProjection.h  LineTool.cpp  LineTool.h  LoftTool.cpp  LoftTool.h  ModificationTools.cpp  ModificationTools.h  MoveTool.cpp  MoveTool.h  OffsetTool.cpp  OffsetTool.h  OrbitTool.cpp  OrbitTool.h  PaintBucketTool.cpp  PaintBucketTool.h  PanTool.cpp  PanTool.h  PolygonTool.cpp  PolygonTool.h  ProtractorTool.cpp  ProtractorTool.h  (+30 more)
src/app/: AutosaveManager.cpp  AutosaveManager.h
src/ui/: ChamferOptionsDialog.cpp  ChamferOptionsDialog.h  CollapsibleSection.cpp  CollapsibleSection.h  CommandPaletteDialog.cpp  CommandPaletteDialog.h  EnvPanel.h  EnvironmentPanel.cpp  EnvironmentPanel.h  ExplorerPanel.cpp  ExplorerPanel.h  ExternalReferenceDialog.cpp  ExternalReferenceDialog.h  GuideManagerDialog.cpp  GuideManagerDialog.h  HistoryPanel.cpp  HistoryPanel.h  ImageImportDialog.cpp  ImageImportDialog.h  InsertShapeDialog.cpp  InsertShapeDialog.h  InspectorPanel.cpp  InspectorPanel.h  LeftToolPalette.cpp  LeftToolPalette.h  LoftOptionsDialog.cpp  LoftOptionsDialog.h  MaterialsPanel.cpp  MaterialsPanel.h  MeasurementWidget.cpp  MeasurementWidget.h  OutlinerPanel.cpp  (+15 more)
styles/: app.qss  app_light.qss
tests/: test_advanced_tools.cpp  test_autosave.cpp  test_bootstrap.py  test_command_stack.cpp  test_cursor_overlay.cpp  test_geometry.cpp  test_inspector_commands.cpp  test_inspector_entity_info.cpp  test_modification_commands.cpp  test_phase4.cpp  test_phase5.cpp  test_phase6.cpp  test_render.cpp  test_scene_commands.cpp  test_scene_settings.cpp  test_sun_model.cpp  test_support.h  test_tool_activation.cpp  test_tools.cpp  test_ui.cpp  test_undo_stack_resets.cpp  test_viewport_depth.cpp
workflows/: release-windows.yml
(+16 files in other folders)
